--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -175,7 +175,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Coverage_report
-        path: /app/coverage/*
+        path: /app/coverage
 
     - name: Alert Test Failures
       if: ${{ failure() && github.ref == 'refs/heads/main' }}
