--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -166,7 +166,7 @@ jobs:
       run: |
         docker-compose exec -T web /bin/sh -c 'bundle config --local disable_exec_load true'
         docker-compose exec -T web /bin/sh -c 'bundle exec rake parallel:setup'
-        docker-compose exec -T web /bin/sh -c 'bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
+        docker-compose exec -T web /bin/sh -c 'COVERAGE=true bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
       env:
         IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
 
