--- a/config/settings.yml
+++ b/config/settings.yml
@@ -105,3 +105,8 @@ features:
     # state: open # Users can make requests for allocations
     # state: closed # Readonly - Users can see if they have or have not made request (does not show number of places)
     state: confirmed # final allocation places are displayed to users in a readonly state
+
+cookies:
+  consent:
+    name: _consented_to_analytics_cookies
+    expire_after_days: 182
