--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -26,5 +26,8 @@ environment:
   name: "beta"
 render_json_errors: true
 
+google_tag_manager:
+  tracking_id: GTM-W56GPKW
+
 features:
   send_request_data_to_bigquery: true
