--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,7 +2,7 @@
 # the following line to use "http://"
 source "https://rubygems.org"
 
-ruby "2.7.5"
+ruby "~> 3.1"
 
 # Include the tech docs gem
 gem "govuk_tech_docs", git: "https://github.com/DFE-Digital/tech-docs-gem"
