--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -168,13 +168,16 @@ jobs:
     - name: Run DfE Analytics checks
       run: docker-compose exec -T web /bin/sh -c 'bundle exec rake dfe:analytics:check'
 
-    - name: Run tests
+    - name: Run Rspec tests
       run: |
         docker-compose exec -T web /bin/sh -c 'bundle config --local disable_exec_load true'
         docker-compose exec -T web /bin/sh -c 'bundle exec rake parallel:setup'
         docker-compose exec -T web /bin/sh -c 'COVERAGE=true bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
       env:
         IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
+
+    - name: Run Javascript tests
+      run: docker-compose exec -T web /bin/sh -c 'yarn run test'
 
     - name: Upload coverage results
       if: always()
