--- a/package.json
+++ b/package.json
@@ -25,12 +25,8 @@
     "babel-jest": "^28.1.3",
     "babel-polyfill": "^6.26.0",
     "esbuild": "^0.14.43",
-    "jest": "^26.5.3",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "sass": "^1.52.3"
-  },
-  "jest": {
-    "roots": [
-      "app"
-    ]
   }
 }
