--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
     "node": "16.x"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
     "build:css": "sass ./app/assets/stylesheets/application.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
     "pretest": "rm -rf .jest-cache",
-    "test": "jest",
-    "test:ci": "jest --ci --runInBand --no-cache --coverage"
+    "standard:fix": "standard --fix",
+    "standard": "standard",
+    "test:ci": "jest --ci --runInBand --no-cache --coverage",
+    "test": "jest"
+  },
+  "standard": {
+    "envs": ["jest", "browser"],
+    "globals": ["$", "google"]
+
   },
   "dependencies": {
     "@ministryofjustice/frontend": "^0.2.1",
@@ -27,6 +34,7 @@
     "esbuild": "^0.14.43",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "standard": "^17.0.0"
   }
 }
