--- a/config/settings/qa.yml
+++ b/config/settings/qa.yml
@@ -2,6 +2,8 @@ gcp_api_key: please_change_me
 publish_api_url: https://qa.api.publish-teacher-training-courses.service.gov.uk
 publish_url: https://qa.publish-teacher-training-courses.service.gov.uk
 find_url: https://qa.find-postgraduate-teacher-training.service.gov.uk
+find_temp_url: https://qa2.find-postgraduate-teacher-training.service.gov.uk
+
 search_ui:
   base_url: https://qa.find-postgraduate-teacher-training.service.gov.uk
 
