--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:css": "yarn run build:css:publish && yarn run build:css:find",
     "build:css:publish": "sass ./app/assets/stylesheets/application.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps",
     "build:css:find": "sass ./app/assets/stylesheets/find_application.scss ./app/assets/builds/find_application.css --no-source-map --load-path=node_modules --quiet-deps",
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build": "yarn run build:js:publish && yarn run build:js:find",
+    "build:js:publish": "esbuild app/javascript/publish/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build:js:find": "esbuild app/javascript/find/*.* --bundle --sourcemap --outdir=app/assets/builds",
     "pretest": "rm -rf .jest-cache",
     "standard:fix": "standard --fix",
     "standard": "standard",
