--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "node": "16.x"
   },
   "scripts": {
+    "build": "yarn run build:css && yarn run build:js",
     "build:css": "yarn run build:css:publish && yarn run build:css:find",
-    "build:css:publish": "sass ./app/assets/stylesheets/application.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps",
+    "build:css:publish": "sass ./app/assets/stylesheets/publish_application.scss ./app/assets/builds/publish_application.css --no-source-map --load-path=node_modules --quiet-deps",
     "build:css:find": "sass ./app/assets/stylesheets/find_application.scss ./app/assets/builds/find_application.css --no-source-map --load-path=node_modules --quiet-deps",
-    "build": "yarn run build:js:publish && yarn run build:js:find",
-    "build:js:publish": "esbuild app/javascript/publish/*.* --bundle --sourcemap --outdir=app/assets/builds",
-    "build:js:find": "esbuild app/javascript/find/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build:js": "yarn run build:js:publish && yarn run build:js:find",
+    "build:js:publish": "esbuild app/javascript/publish/*.* --bundle --sourcemap --outdir=app/assets/builds/publish",
+    "build:js:find": "esbuild app/javascript/find/*.* --bundle --sourcemap --outdir=app/assets/builds/find",
     "pretest": "rm -rf .jest-cache",
     "standard:fix": "standard --fix",
     "standard": "standard",
