--- a/.github/workflows/database-restore.yml
+++ b/.github/workflows/database-restore.yml
@@ -108,7 +108,7 @@ jobs:
      matrix:
        environment: [qa, staging]
    steps:
-      - uses: DFE-Digital/bat-infrastructure/actions/setup-cf-cli@main
+      - uses: DFE-Digital/github-actions/setup-cf-cli@master
         name: Setup cf cli
         with:
          CF_USERNAME: ${{ secrets[format('CF_USERNAME_{0}', matrix.environment)] }}
